secondfile/objects/RDS_Premise_Details__c.object
<CustomObject>
    <fields>
        <fullName>MACD_Change_Name__c</fullName>
        <label>MACD Change Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Vlan</fullName>
                </value>
                <value>
                    <fullName>Disconnect Vlan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Change_Type__c</fullName>
        <label>MACD Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AddVlan</fullName>
                </value>
                <value>
                    <fullName>DisconnectVlan</fullName>
                </value>
                <value>
                    <fullName>UBB Add</fullName>
                </value>
                <value>
                    <fullName>UBB Change</fullName>
                </value>
                <value>
                    <fullName>UBB Remove</fullName>
                </value>
                <value>
                    <fullName>CoS Add</fullName>
                </value>
                <value>
                    <fullName>CoS Remove</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Deal_Reg_Number__c</fullName>
        <description>Technical field not required on page layout. This field is required to get value on DH Status Update Deal Hash Details record for MACD Order.</description>
        <label>MACD Deal Reg Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_RDS_Received_Date__c</fullName>
        <description>Technical field not required on page layout. This field is required to get value on DH Status Update Deal Hash Details record for MACD Order.</description>
        <label>MACD RDS Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MACD_RDS_Review_Completed_Date__c</fullName>
        <description>Technical field not required on page layout. This field is required to get value on DH Status Update Deal Hash Details record for MACD Order.</description>
        <label>MACD RDS Review Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <label>MACD Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Attention__c</fullName>
        <label>MLDB Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Building__c</fullName>
        <label>MLDB Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_City__c</fullName>
        <label>MLDB City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Country__c</fullName>
        <label>MLDB Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_County__c</fullName>
        <label>MLDB County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Floor__c</fullName>
        <label>MLDB Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_GeoCode__c</fullName>
        <label>MLDB GeoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_International_Postal_Code__c</fullName>
        <label>MLDB International Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Province__c</fullName>
        <label>MLDB Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Room__c</fullName>
        <label>MLDB Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_State__c</fullName>
        <label>MLDB State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Street_Direction__c</fullName>
        <label>MLDB Street Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Street_Name__c</fullName>
        <label>MLDB Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Street_Number__c</fullName>
        <label>MLDB Street Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Street_Trailing_Direction__c</fullName>
        <label>MLDB Street Trailing Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Street_Type__c</fullName>
        <label>MLDB Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Zipcode_Extension__c</fullName>
        <label>MLDB Zipcode Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Zipcode_GeoCode__c</fullName>
        <label>MLDB Zipcode GeoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLDB_Zipcode__c</fullName>
        <label>MLDB Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Control_Office__c</fullName>
        <description>Premise Details-Control Office Details-Maintenance Control Office</description>
        <label>Maintenance Control Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Bandwidth_Commitment__c</fullName>
        <description>Premise Details-Premise Data-UBBBilling-HiCap Flex Billing Option-Minimum Bandwidth Commitment</description>
        <label>Minimum Bandwidth Commitment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mounting_Option_NTE__c</fullName>
        <label>Mounting Option (NTE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Control_Office__c</fullName>
        <description>Premise Details-Control Office Details-Network Control Office</description>
        <label>Network Control Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewLoginTime__c</fullName>
        <description>Technical Field</description>
        <label>New LoginTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Construction_Indicator__c</fullName>
        <description>Premise Details-New Construction Indicator</description>
        <label>New Construction Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Circuits__c</fullName>
        <label>No Of Circuits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Premise Details-Order Related Data-Notes</description>
        <label>Notes</label>
        <length>68</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Status__c</fullName>
        <description>Custom object to store the Notification status values</description>
        <label>Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Update in progress</fullName>
                </value>
                <value>
                    <fullName>Update Complete</fullName>
                </value>
                <value>
                    <fullName>Update Failed</fullName>
                </value>
                <value>
                    <fullName>Null value identified</fullName>
                </value>
                <value>
                    <fullName>Retry in Progress</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Npa_NXX__c</fullName>
        <description>Premise Details-Npa NXX</description>
        <label>Npa NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <description>Premise Details-Access Details-Number of Locations</description>
        <label>Number of Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyID__c</fullName>
        <formula>DealHash__r.Opportunity__r.Id</formula>
        <label>OpptyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Order_Number__c</fullName>
        <formula>DealHash__r.Opportunity__r.BID_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalRequestedDueDate__c</fullName>
        <description>Custom object to stroe the originally requested Due date</description>
        <label>OriginalRequestedDueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OverAllDueDate__c</fullName>
        <description>Custom object to store the OverallDuedate</description>
        <label>OverAllDueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Over_Time_Indicator__c</fullName>
        <description>Premise Details-Over Time Indicator</description>
        <label>Over Time Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Control_Office__c</fullName>
        <description>Premise Details-Control Office Details-
Overall Control Office</description>
        <label>Overall Control Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIU__c</fullName>
        <description>DealHash-RDS-Premise Details-PIU</description>
        <label>PIU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Turn_up_Date__c</fullName>
        <description>Premise Details-Order Related Data-Planned Turn up Date</description>
        <label>Planned Turn up Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pots_Indicator__c</fullName>
        <description>Premise Details-Pots Indicator</description>
        <label>Pots Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Type_NTE__c</fullName>
        <label>Power Type (NTE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiseSPName__c</fullName>
        <formula>RelatedQuote__r.Owner:User.FirstName +&apos; &apos;+ RelatedQuote__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise SP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Address__c</fullName>
        <label>Premise Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Attention__c</fullName>
        <label>Premise Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Building__c</fullName>
        <label>Premise Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_City__c</fullName>
        <label>Premise City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Country__c</fullName>
        <label>Premise Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_County__c</fullName>
        <label>Premise County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Floor__c</fullName>
        <label>Premise Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Friendly_Name__c</fullName>
        <description>Premise Details-Premise Data-Premise Friendly Name</description>
        <label>Premise Friendly Name</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_GeoCode__c</fullName>
        <label>Premise GeoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_International_Postal_Code__c</fullName>
        <label>Premise International Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Inventory_Lookup_Status__c</fullName>
        <description>Status to indicate if the premise was successfully updated by the inventory call or not</description>
        <label>Premise_Inventory Lookup Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premise_LAI__c</fullName>
        <displayFormat>E{0000000000}</displayFormat>
        <label>Premise LAI Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <label>Premise Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Province__c</fullName>
        <label>Premise Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Room__c</fullName>
        <label>Premise Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_State__c</fullName>
        <label>Premise State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Street_Direction__c</fullName>
        <label>Premise Street Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Street_Name__c</fullName>
        <label>Premise Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Street_Number__c</fullName>
        <label>Premise Street Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Street_Trailing_Direction__c</fullName>
        <label>Premise Street Trailing Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Street_Type__c</fullName>
        <label>Premise Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Zipcode_Extension__c</fullName>
        <label>Premise Zipcode Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Zipcode__c</fullName>
        <label>Premise Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premsie_Zipcode_GeoCode__c</fullName>
        <label>Premsie Zipcode GeoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_Notification_Action__c</fullName>
        <description>Custom object to store the Push notification action.</description>
        <label>Push Notification Action</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_Notification_Date__c</fullName>
        <description>Custom object to store the push notification date</description>
        <label>Push Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Push_Notification_Site_Status__c</fullName>
        <label>Push Notification Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>HARD_DISCONNECT_PENDING</fullName>
                </value>
                <value>
                    <fullName>SOFT_DISCONNECT_PENDING</fullName>
                </value>
                <value>
                    <fullName>SOFT_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>HARD_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>PENDING_MACD_CHANGE</fullName>
                </value>
                <value>
                    <fullName>PENDING_MACD_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>PENDING_CANCEL</fullName>
                </value>
                <value>
                    <fullName>PENDING_ADD_UBB</fullName>
                </value>
                <value>
                    <fullName>PENDING_CHANGE_MBC</fullName>
                </value>
                <value>
                    <fullName>PENDING_REMOVE_UBB</fullName>
                </value>
                <value>
                    <fullName>LOCKED</fullName>
                </value>
                <value>
                    <fullName>PENDING_CHANGE_COS</fullName>
                </value>
                <value>
                    <fullName>PENDING_REMOVE_COS</fullName>
                </value>
                <value>
                    <fullName>PENDING_ADD_COS</fullName>
                </value>
                <value>
                    <fullName>PENDING_SOFT_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>PENDING_SPEED_CHANGE</fullName>
                </value>
                <value>
                    <fullName>PENDING_SOFT_DISCONNECT_CANCEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Owner__c</fullName>
        <formula>Cancel_Quote_Proposal__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Cancel_Quote_Proposal__r.Owner:User.LastName</formula>
        <label>Quote Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_owner_email__c</fullName>
        <label>Quote owner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RDS_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>RDS Version</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROM_email__c</fullName>
        <label>ROM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ROM_username__c</fullName>
        <formula>DealHash__r.Opportunity__r.Account.ROM__r.FirstName&amp;&quot; &quot;&amp; DealHash__r.Opportunity__r.Account.ROM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROM username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Issue_Date__c</fullName>
        <description>Premise Details-Order Related Data-Record Issue Date</description>
        <label>Record Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelatedQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>RDS-Premise Details (Quote/Proposal)</relationshipLabel>
        <relationshipName>RDS_Premise_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Order__c</fullName>
        <description>Premise Details-Order Related Data-Related Order</description>
        <label>Related Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Quote_Name__c</fullName>
        <label>Related Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Premise Details-Order Related Data-Remarks</description>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract_Deal_Hash__c</fullName>
        <formula>DealHash__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Contract Deal Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract_Quote__c</fullName>
        <formula>RelatedQuote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Contract Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract__c</fullName>
        <formula>RelatedQuote__r.Renewal_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Due_Date_Old_Value__c</fullName>
        <label>Request Due Date Old Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Due_Date__c</fullName>
        <description>Premise Details-Order Related Data-Request Due Date</description>
        <label>Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S25_USOC__c</fullName>
        <description>Premise Details-Order Related Data-USOCS-
S25 USOC</description>
        <label>S25 USOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Name__c</fullName>
        <formula>DealHash__r.Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPuser_Email__c</fullName>
        <description>Field to store SP user email address.</description>
        <label>SPuser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Location_Name__c</fullName>
        <description>Premise Details-Secondary Location Name</description>
        <label>Secondary Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Grid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Anytime a new premise detail is created the Sent to Grid should be false
When an OB call is made to Cast Iron to perform UDH, CDH, or ArchiveUDH. Cast Iron will change it to true.</description>
        <label>Sent to Grid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Office__c</fullName>
        <description>Premise Details-Control Office Details-Service Office</description>
        <label>Service Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signaling_Format__c</fullName>
        <description>Premise Details-Access Details-Signaling Format</description>
        <label>Signaling Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteStatusSpecificToInventory__c</fullName>
        <formula>IF(ISPICKVAL(Site_Status__c,&quot;NEW&quot;),&quot;PENDING&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;SOFT_DISCONNECT&quot;),&quot;SOFT DISCONNECT&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;HARD_DISCONNECT_PENDING&quot;), &quot;PENDING&quot; 
,IF(ISPICKVAL(Site_Status__c,&quot;SOFT_DISCONNECT_PENDING&quot;), &quot;PENDING&quot;
,IF(AND(ISPICKVAL(Site_Status__c,&quot;PENDING_MACD_CHANGE&quot;),ISPICKVAL(MACD_Change_Type__c,&quot;AddVlan&quot;)), &quot;Pending-Adding VLAN&quot; 
,IF(AND(ISPICKVAL(Site_Status__c,&quot;PENDING_MACD_CHANGE&quot;),ISPICKVAL(MACD_Change_Type__c,&quot;Disconnect Vlan&quot;)), &quot;Pending-Removing VLAN&quot; 
,IF(AND(ISPICKVAL(Site_Status__c,&quot;PENDING_MACD_CHANGE&quot;),ISPICKVAL(MACD_Change_Type__c,&quot;VLAN Speed Change&quot;)), &quot;Pending-Changing VLAN Speed&quot; 
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_MACD_CHANGE&quot;), &quot;PENDING&quot; 
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_CANCEL&quot;), &quot;Pending-Cancelling Site&quot; 
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_CHANGE_COS&quot;), &quot;Pending-Changing CoS&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_MACD_DISCONNECT&quot;), &quot;Pending-Removing VLAN&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_ADD_UBB&quot;), &quot;Pending-Adding Hi-Cap Flex&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_CHANGE_MBC&quot;), &quot;Pending-Changing MBC&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_REMOVE_UBB&quot;), &quot;Pending-Removing Hi-Cap Flex&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING&quot;), &quot;PENDING&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_SPEED_CHANGE&quot;),&quot;Pending-Changing Port/Access Speed&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_REMOVE_COS&quot;),&quot;Pending-Removing CoS&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_ADD_COS&quot;),&quot;Pending-Adding CoS&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;HARD_DISCONNECT&quot;), &quot;HARD DISCONNECT&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;CANCELLED&quot;), &quot;CANCELLED&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;LOCKED&quot;),&quot;PENDING&quot;
,IF(ISPICKVAL(Site_Status__c,&quot;PENDING_CONTRACT_RENEWAL&quot;),&quot;Pending Renewal&quot; 
,IF(ISPICKVAL(Site_Status__c,&quot;&quot;),&quot;PENDING&quot;
,&quot;ACTIVE&quot;)))))))))))))))))))))))</formula>
        <label>SiteStatusSpecificToInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Status__c</fullName>
        <label>Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>HARD_DISCONNECT_PENDING</fullName>
                </value>
                <value>
                    <fullName>SOFT_DISCONNECT_PENDING</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>SOFT_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>HARD_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>PENDING_MACD_CHANGE</fullName>
                </value>
                <value>
                    <fullName>PENDING_MACD_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>PENDING_CANCEL</fullName>
                </value>
                <value>
                    <fullName>PENDING_ADD_UBB</fullName>
                </value>
                <value>
                    <fullName>PENDING_CHANGE_MBC</fullName>
                </value>
                <value>
                    <fullName>PENDING_REMOVE_UBB</fullName>
                </value>
                <value>
                    <fullName>PENDING_CONTRACT_RENEWAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_account_number__c</fullName>
        <formula>DealHash__r.Sub_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub account number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSP_Authorization_Code__c</fullName>
        <description>Premise Details-TSP Authorization Code</description>
        <label>TSP Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTU_Ready_Date__c</fullName>
        <label>TTU Ready Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBBilling_Number__c</fullName>
        <description>DealHash-RDS-Premise Details-UBBilling Number</description>
        <label>UBBilling Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCR__c</fullName>
        <description>Premise Details-Order Related Data-UCR</description>
        <label>UCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_ID_Status__c</fullName>
        <description>To capture whether or not the USO Number was successfully created or not, when Hard Disconnect is performed.</description>
        <label>USO ID Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number_of_USOS__c</fullName>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>USO Number of USOS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USO_Order_Action__c</fullName>
        <defaultValue>&quot;A&quot;</defaultValue>
        <description>US321961: Needed for Circuit ID/USO calls</description>
        <label>USO Order Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_VLAN__c</fullName>
        <label>USO - VLAN Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilink__c</fullName>
        <label>Unilink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <formula>LEFT(Logged_In_User__c,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Count__c</fullName>
        <label>VLAN Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VLAN_Name__c</fullName>
        <label>VLAN Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Action_List__c</fullName>
        <label>Work Action List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Working_Telephone_Number__c</fullName>
        <description>Premise Details-Working Telephone Number</description>
        <label>Working Telephone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writing_Control_Office__c</fullName>
        <description>Premise Details-Control Office Details-Writing Control Office</description>
        <label>Writing Control Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isAlreadyUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAlreadyUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNotUpdatedForSiteInventory__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is created to bypass the Validation Rule in premise while it&apos;s updating for site inventory</description>
        <label>isNotUpdatedForSiteInventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isbackend__c</fullName>
        <formula>RelatedQuote__r.MACD_Change_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isbackend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testDate__c</fullName>
        <formula>Request_Due_Date__c - Best_Available_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>